correcting-html-checker-errors

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" class="nojs">
 <head>
   <title>The International Society for Universal Dialogue</title>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/contact_style.css">
@@ -30,11 +30,11 @@
     <div class="body">
       <h2>Socials</h2>
     </div>
-      <ul><a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="20%"></a></ul>
-      <ul><a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="20%"></a></ul>
-      <ul><a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="20%"></a></ul>
-      <ul><a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="20%"></a></ul>
-      <ul><a href="https://www.Youtube.com/"><img src="images/youtubeLogo.png" alt="YouTube" width="60%"></a></ul>
+      <a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="20%"></a>
+      <a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="20%"></a>
+      <a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="20%"></a>
+      <a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="20%"></a>
+      <a href="https://www.Youtube.com/"><img src="images/youtubeLogo.png" alt="YouTube" width="60%"></a>
     </div>
     </div>
     <div class="rightcolumn">
@@ -42,7 +42,7 @@
         <form method="get" action="#null" name="contactForm" autocomplete="on" onsubmit="return checkForm()">
         <h1>Contact International Society for Universal Dialogue.</h1>
         <div class="register">
-          <input type="text" name="first_name" placeholder="First Name*" autocomplete="legal-name">
+          <input type="text" name="first_name" placeholder="First Name*" autocomplete="given-name">
           <input type="text" name="last_name" placeholder="Last Name*" autocomplete="family-name">
           <input type="text" name="email_info" placeholder="Email*" autocomplete="email">
           <input type="text" name="organization" placeholder="Organization">
