--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
     <div class="body">
       <h2>Socials</h2>
     </div>
-      <a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="60px"></a>
-      <a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="60px"></a>
-      <a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="60px"></a>
-      <a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="60px"></a>
-      <a href="https://www.Youtube.com/"><img src="images/youtubeLogo.png" alt="YouTube" width="170px"></a>
+      <a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="60"></a>
+      <a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="60"></a>
+      <a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="60"></a>
+      <a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="60"></a>
+      <a href="https://www.Youtube.com/"><img src="images/youtubeLogo.png" alt="YouTube" width="170"></a>
     </div>
     </div>
     <div class="rightcolumn">
