--- a/announce.html
+++ b/announce.html
@@ -25,25 +25,33 @@
   <div class="setup">
     <div class="borders">
       <div id="peru">
-        <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
+        <div>
+          <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
+        </div>
         <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"> How to obtain a visa to enter Peru</a>
       </div>
     </div>
     <div class="borders">
       <div id="dialogue">
-        <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
+        <div>
+          <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
+        </div>
         <a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
       </div>
     </div>
     <div class="borders">
       <div id="video">
-        <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
+        <div>
+          <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
+        </div>
         <a href="https://www.worldialogue.org/videos">VIDEOS</a>
       </div>
     </div>
     <div class="borders">
       <div id="past">
-        <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
+        <div>
+          <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
+        </div>
         <a href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
       </div>
     </div>
