deleting ids and replace with one class

--- a/announce.html
+++ b/announce.html
@@ -24,7 +24,7 @@
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
   <div class="setup">
     <div class="borders">
-      <div id="peru">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
         </div>
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="borders">
-      <div id="dialogue">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
         </div>
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="borders">
-      <div id="video">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
         </div>
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="borders">
-      <div id="past">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
         </div>
