--- a/announce.html
+++ b/announce.html
@@ -24,36 +24,36 @@
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
   <div class="setup">
     <div class="borders">
-      <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><div class="border2">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
         </div>
         <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"> How to obtain a visa to enter Peru</a>
-      </div></a>
+      </div>
     </div>
     <div class="borders">
-      <a href="https://www.worldialogue.org/d---u-journal"><div class="border2">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
         </div>
         <a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
-      </div></a>
+      </div>
     </div>
     <div class="borders">
-      <a href="https://www.worldialogue.org/videos"><div class="border2">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
         </div>
         <a href="https://www.worldialogue.org/videos">VIDEOS</a>
-      </div></a>
+      </div>
     </div>
     <div class="borders">
-      <a href="https://www.worldialogue.org/past-events"><div class="border2">
+      <div class="border2">
         <div>
           <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
         </div>
         <a href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
-      </div></a>
+      </div>
     </div>
   </div>
   <div id="social">
