--- a/announce.html
+++ b/announce.html
@@ -47,6 +47,14 @@
         <a href="https://www.worldialogue.org/videos">VIDEOS</a>
       </div>
     </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
+        </div>
+        <a href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
+      </div>
+    </div>
   </div>
   <div id="social">
     <ul>
