--- a/announce.html
+++ b/announce.html
@@ -10,7 +10,7 @@
 <body>
 <main id="content">
   <div id="head">
-    <a href="index.html"><img src="announce_img/ISUD_Logo_color.webp" alt="ISUD_Logo"></a>
+    <a href="index.html"><img src="images/ISUD_Logo_color.webp" alt="ISUD_Logo"></a>
     <h1>The International Society for Universal Dialogue</h1>
   </div>
   <div id="nav">
@@ -21,47 +21,47 @@
       <li class="nav-item"><a href="contact.html">Contact</a></li>
     </ul>
   </div>
-  <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
-  <div class="setup">
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
-        </div>
-        <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"> How to obtain a visa to enter Peru</a>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
-        </div>
-        <a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
-        </div>
-        <a href="https://www.worldialogue.org/videos">VIDEOS</a>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
-        </div>
-        <a href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
-      </div>
-    </div>
-  </div>
   <div id="social">
     <ul>
       <li><a href="https://currents.google.com/117167403531518744294/posts"><img src="announce_img/google logo.webp" alt="Google"></a></li>
       <li><a href="https://www.facebook.com/wix"><img src="announce_img/Facebook logo.webp" alt="Facebook"></a></li>
       <li><a href="https://www.linkedin.com/company/wix.com/?trk=tabs_biz_home"><img src="announce_img/insta logo.webp" alt="LinkedIn"></a></li>
     </ul>
+  </div>
+  <h3>Special Events</h3>
+  <div class="setup">
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+          <p>Peru</p>
+      </div>
+    </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>DIALOGUE and UNIVERSALISM JOURNAL</p>
+      </div>
+    </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>VIDEOS</p>
+      </div>
+    </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>PAST EVENTS</p>
+      </div>
+    </div>
   </div>
 </main>
 </body>
