--- a/announce.html
+++ b/announce.html
@@ -23,9 +23,11 @@
   </div>
   <div id="social">
     <ul>
-      <li><a href="https://currents.google.com/117167403531518744294/posts"><img src="announce_img/google logo.webp" alt="Google"></a></li>
-      <li><a href="https://www.facebook.com/wix"><img src="announce_img/Facebook logo.webp" alt="Facebook"></a></li>
-      <li><a href="https://www.linkedin.com/company/wix.com/?trk=tabs_biz_home"><img src="announce_img/insta logo.webp" alt="LinkedIn"></a></li>
+      <li><img src="images/youtube1.jpg" alt="Youtube"></li>
+      <li><img src="images/facebook1.png" alt="Facebook"></li>
+      <li><img src="images/insta1.jpg" alt="Instagram"></li>
+      <li><img src="images/in1.png" alt="LinkedIn"></li>
+      <li><img src="images/twitter1.png" alt="Twitter"></li>
     </ul>
   </div>
   <div class="setup">
