--- a/announce.html
+++ b/announce.html
@@ -23,9 +23,9 @@
   </div>
   <div id="social">
     <ul>
-      <li><img src="images/youtube1.jpg" alt="Youtube"></li>
+      <li><img src="images/youtube1.png" alt="Youtube"></li>
       <li><img src="images/facebook1.png" alt="Facebook"></li>
-      <li><img src="images/insta1.jpg" alt="Instagram"></li>
+      <li><img src="images/insta1.png" alt="Instagram"></li>
       <li><img src="images/in1.png" alt="LinkedIn"></li>
       <li><img src="images/twitter1.png" alt="Twitter"></li>
     </ul>
