--- a/announce.html
+++ b/announce.html
@@ -21,14 +21,16 @@
       <li class="nav-item"><a href="contact.html">Contact</a></li>
     </ul>
   </div>
-  <div id="social">
-    <ul>
-      <li><img src="images/youtube1.png" alt="Youtube"></li>
-      <li><img src="images/facebook1.png" alt="Facebook"></li>
-      <li><img src="images/insta1.png" alt="Instagram"></li>
-      <li><img src="images/in1.png" alt="LinkedIn"></li>
-      <li><img src="images/twitter1.png" alt="Twitter"></li>
-    </ul>
+  <div class="social1">
+    <div id="social">
+      <ul>
+        <li><img src="images/youtube1.png" alt="Youtube"></li>
+        <li><img src="images/facebook1.png" alt="Facebook"></li>
+        <li><img src="images/insta1.png" alt="Instagram"></li>
+        <li><img src="images/in1.png" alt="LinkedIn"></li>
+        <li><img src="images/twitter1.png" alt="Twitter"></li>
+      </ul>
+    </div>
   </div>
   <div class="setup">
     <h3>Special Events</h3>
