--- a/announce.html
+++ b/announce.html
@@ -66,6 +66,38 @@
         <p>PAST EVENTS</p>
       </div>
     </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>Special Event</p>
+      </div>
+    </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>Special Event</p>
+      </div>
+    </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>Special Event</p>
+      </div>
+    </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>Special Event</p>
+      </div>
+    </div>
   </div>
 </main>
 </body>
