--- a/announce.html
+++ b/announce.html
@@ -14,11 +14,10 @@
     <h1>The International Society for Universal Dialogue</h1>
   </div>
   <div id="nav">
-    <ul class="nav-list">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="about.html">About Us</a></li>
-      <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
-      <li class="nav-item"><a href="contact.html">Contact</a></li>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="announce.html">Announcements and Events</a>
+    <a href="contact.html">Contact</a>
     </ul>
   </div>
   <div class="social1">
