--- a/announce.html
+++ b/announce.html
@@ -13,7 +13,7 @@
     <a href="index.html"><img src="images/ISUD_Logo_color.webp" alt="ISUD_Logo"></a>
     <h1>The International Society for Universal Dialogue</h1>
   </div>
-  <div id="nav">
+  <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="announce.html">Announcements and Events</a>
@@ -64,6 +64,14 @@
           <img src="images/black_white_logo.webp" alt="logo">
         </div>
         <p>PAST EVENTS</p>
+      </div>
+    </div>
+    <div class="borders">
+      <div class="border2">
+        <div>
+          <img src="images/black_white_logo.webp" alt="logo">
+        </div>
+        <p>Special Event</p>
       </div>
     </div>
     <div class="borders">
