--- a/announce.html
+++ b/announce.html
@@ -23,13 +23,11 @@
   <div class="social1">
     <div id="social">
       <h3>Socials</h3>
-      <ul>
-        <li><img src="images/youtube1.png" alt="Youtube"></li>
-        <li><img src="images/facebook1.png" alt="Facebook"></li>
-        <li><img src="images/insta1.png" alt="Instagram"></li>
-        <li><img src="images/in1.png" alt="LinkedIn"></li>
-        <li><img src="images/twitter1.png" alt="Twitter"></li>
-      </ul>
+      <img src="images/youtube1.png" alt="Youtube">
+      <img src="images/facebook1.png" alt="Facebook">
+      <img src="images/insta1.png" alt="Instagram">
+      <img src="images/in1.png" alt="LinkedIn">
+      <img src="images/twitter1.png" alt="Twitter">
     </div>
   </div>
   <div class="setup">
