--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
-  <link rel="stylesheet" media="screen" href="css/contact_style.css">
+  <link rel="stylesheet" media="screen" href="css/style.css">
   <script src="js/site.js"></script>
 </head>
 <body>
