adding grid layout for announcement page

--- a/announce.html
+++ b/announce.html
@@ -5,15 +5,14 @@
   <meta charset="utf-8"/>
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
-  <link rel="stylesheet" media="screen" href="css/announce_style.css">
+  <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <body>
-<main id="content">
-  <div id="head">
+  <div id="header">
     <a href="index.html"><img src="images/ISUD_Logo_color.webp" alt="ISUD_Logo"></a>
     <h1>The International Society for Universal Dialogue</h1>
   </div>
-  <div class="navbar">
+  <div class="topnav">
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="announce.html">Announcements and Events</a>
