--- a/announce.html
+++ b/announce.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   <div id="header">
-    <a href="index.html"><img src="images/ISUD_Logo_color.webp" alt="ISUD_Logo"></a>
     <h1>The International Society for Universal Dialogue</h1>
   </div>
   <div class="topnav">
@@ -17,95 +16,95 @@
     <a href="about.html">About Us</a>
     <a href="announce.html">Announcements and Events</a>
     <a href="contact.html">Contact</a>
-    </ul>
   </div>
-  <div class="social1">
-    <div id="social">
-      <div id="s-title">
-        <h3>Socials</h3>
-      </div>
-      <img src="images/youtube1.png" alt="Youtube">
-      <img src="images/facebook1.png" alt="Facebook">
-      <img src="images/insta1.png" alt="Instagram">
-      <img src="images/in1.png" alt="LinkedIn">
-      <img src="images/twitter1.png" alt="Twitter">
+  <div class="row">
+    <div class="leftcolumn">
+    <div class="card">
+    <div class="body">
+      <h2>Socials</h2>
+    </div>  
+      <a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="60"></a>
+      <a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="60"></a>
+      <a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="60"></a>
+      <a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="60"></a>
+      <a href="https://www.Youtube.com/"><img src="images/youtubeLogo.png" alt="YouTube" width="170"></a>
     </div>
+    </div>
+    <div class="rightcolumn">
+      <div class="card">
+        <h1>Special Events</h1>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+              <p>Peru</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>DIALOGUE and UNIVERSALISM JOURNAL</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>VIDEOS</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>PAST EVENTS</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>Special Event</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>Special Event</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>Special Event</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>Special Event</p>
+          </div>
+        </div>
+        <div class="borders">
+          <div class="border2">
+            <div>
+              <img src="images/black_white_logo.webp" alt="logo">
+            </div>
+            <p>Special Event</p>
+          </div>
+        </div>
   </div>
-  <div class="setup">
-    <h3>Special Events</h3>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-          <p>Peru</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>DIALOGUE and UNIVERSALISM JOURNAL</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>VIDEOS</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>PAST EVENTS</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>Special Event</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>Special Event</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>Special Event</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>Special Event</p>
-      </div>
-    </div>
-    <div class="borders">
-      <div class="border2">
-        <div>
-          <img src="images/black_white_logo.webp" alt="logo">
-        </div>
-        <p>Special Event</p>
-      </div>
-    </div>
-  </div>
-</main>
 </body>
 </html>
