--- a/announce.html
+++ b/announce.html
@@ -32,7 +32,9 @@
     </div>
     <div class="rightcolumn">
       <div class="card">
+      <div class="body">
         <h1>Special Events</h1>
+      </div>
         <div class="borders">
           <div class="border2">
             <div>
