--- a/announce.html
+++ b/announce.html
@@ -48,7 +48,7 @@
             <div>
               <img src="images/black_white_logo.webp" alt="logo">
             </div>
-            <p>DIALOGUE and UNIVERSALISM JOURNAL</p>
+            <p>UNIVERSALISM JOURNAL</p>
           </div>
         </div>
         <div class="borders">
