-fixed and updated the home page, about us, and announcements

--- a/about.html
+++ b/about.html
@@ -8,16 +8,15 @@
   <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <body>
-<main id="content">
-  <header>The International Society for Universal Dialogue</header>
-    <h2>About Us</h2>
-    <div id="nav">
-      <ul class="nav-list">
-        <li class="nav-item"><a href="index.html">Home</a></li>
-        <li class="nav-item"><a href="about.html">About Us</a></li>
-        <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
-        <li class="nav-item"><a href="contact.html">Contact</a></li>
-      </ul>
+<div class="header">
+    <h1>The International Society for Universal Dialogue</h1>
+  </div>
+  <div class="topnav">
+    <a href="index.html">Home Page</a>
+    <a href="about.html">About Us</a>
+    <a href="announce.html">Announcements & Events</a>
+    <a href="contact.html">Contact Us</a>
+  </div>
     </div>
   <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
   <p>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</p>
