--- a/announce.html
+++ b/announce.html
@@ -2,6 +2,7 @@
 <html lang="en" class="nojs">
 <head>
   <title>The International Society for Universal Dialogue</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8"/>
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
@@ -10,14 +11,15 @@
 <body>
 <main id="content">
   <img src="/images/ISUD_Logo_color.png" alt="ISUD_Logo">
-  <h1>The International Society for Universal Dialogue</h1>
-  <div id="nav">
-    <ul class="nav-list">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="about.html">About Us</a></li>
-      <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
-      <li class="nav-item"><a href="contact.html">Contact</a></li>
-    </ul>
+  div class="header">
+    <h1>The International Society for Universal Dialogue</h1>
+  </div>
+  <div class="topnav">
+    <a href="index.html">Home Page</a>
+    <a href="about.html">About Us</a>
+    <a href="announce.html">Announcements & Events</a>
+    <a href="contact.html">Contact Us</a>
+  </div>
   </div>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
   <div id="infols">
