--- a/index.html
+++ b/index.html
@@ -8,15 +8,53 @@
   <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <body>
-<main id="content">
-  <h1>The International Society for Universal Dialogue</h1>
-  <div id="nav">
-    <ul class="nav-list">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="about.html">About Us</a></li>
-      <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
-      <li class="nav-item"><a href="contact.html">Contact</a></li>
-    </ul>
+<div class="header">
+    <h1>The International Society for Universal Dialogue</h1>
+  </div>
+  <div class="topnav">
+    <a href="index.html">Home Page</a>
+    <a href="about.html">About Us</a>
+    <a href="announce.html">Announcements & Events</a>
+    <a href="contact.html">Contact Us</a>
+  </div>
+  <div class="row">
+    <div class="leftcolumn">
+    <div class="card">
+    <div class="body">
+      <h2>Home of the Universal Dialogue</h2>
+    </div>
+      <p>Keep Up With The Latest And The Greatest, Below Is The Diffrent Links.</p>
+    </div>
+    <div class="card">
+    <div class="body">
+      <h2>Socials</h2>
+    </div>
+      <a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="60"></a>
+      <a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="60"></a>
+      <a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="60"></a>
+      <a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="60"></a>
+      <a href="https://www.Youtube.com/"><img src="images/youtubeLogo.png" alt="YouTube" width="170"></a>
+    </div>
+    </div>
+    <div class="rightcolumn">
+      <div class="card">
+        <form method="get" action="#null" name="contactForm" autocomplete="on" onsubmit="return checkForm()">
+        <h1>Welcome News Letter For International Society for Universal Dialogue.</h1>
+        <div class="register">
+          <input type="text" name="first_name" placeholder="First Name*" autocomplete="given-name">
+          <input type="text" name="last_name" placeholder="Last Name*" autocomplete="family-name">
+          <input type="text" name="email_info" placeholder="Email*" autocomplete="email">
+          <input type="text" name="organization" placeholder="Organization">
+          <input type="text" name="message" placeholder="Message">
+        </div>
+        <div class="check">
+          <input type="checkbox" name="checkbox">
+          <label>I agree to signup for ISUD's newsletter</label>
+        </div>
+        <button type="submit">Subscribe</button>
+      </form>
+      </div>
+    </div>
   </div>
 
 </main>
