--- a/announce.html
+++ b/announce.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <body>
-  <div id="header">
+  <div class="header">
     <h1>The International Society for Universal Dialogue</h1>
   </div>
   <div class="topnav">
