--- a/announce.html
+++ b/announce.html
@@ -33,7 +33,7 @@
     <div class="rightcolumn">
       <div class="card">
       <div class="body">
-        <h1>Special Events</h1>
+        <h1>List of Announcements and Events</h1>
       </div>
         <div class="borders">
           <div class="border2">
