--- a/announce.html
+++ b/announce.html
@@ -72,7 +72,7 @@
             <div>
               <img src="images/black_white_logo.webp" alt="logo">
             </div>
-            <p>Special Event</p>
+            <p>Event Example</p>
           </div>
         </div>
         <div class="borders">
@@ -80,7 +80,7 @@
             <div>
               <img src="images/black_white_logo.webp" alt="logo">
             </div>
-            <p>Special Event</p>
+            <p>Event Example</p>
           </div>
         </div>
         <div class="borders">
@@ -88,7 +88,7 @@
             <div>
               <img src="images/black_white_logo.webp" alt="logo">
             </div>
-            <p>Special Event</p>
+            <p>Event Example</p>
           </div>
         </div>
         <div class="borders">
@@ -96,7 +96,7 @@
             <div>
               <img src="images/black_white_logo.webp" alt="logo">
             </div>
-            <p>Special Event</p>
+            <p>Event Example</p>
           </div>
         </div>
         <div class="borders">
@@ -104,7 +104,7 @@
             <div>
               <img src="images/black_white_logo.webp" alt="logo">
             </div>
-            <p>Special Event</p>
+            <p>Event Example</p>
           </div>
         </div>
   </div>
