--- a/announce.html
+++ b/announce.html
@@ -38,9 +38,9 @@
         <div class="borders">
           <div class="border2">
             <div>
-              <img src="images/black_white_logo.webp" alt="logo">
+              <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="images/black_white_logo.webp" alt="logo"></a>
             </div>
-              <p>Peru</p>
+              <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><p>Peru</p></a>
           </div>
         </div>
         <div class="borders">
