--- a/announce.html
+++ b/announce.html
@@ -46,25 +46,25 @@
         <div class="borders">
           <div class="border2">
             <div>
-              <img src="images/black_white_logo.webp" alt="logo">
+              <a href="https://www.worldialogue.org/d---u-journal"><img src="images/black_white_logo.webp" alt="logo"></a>
             </div>
-            <p>Universalism Journalism</p>
+            <a href="https://www.worldialogue.org/d---u-journal"><p>Universalism Journalism</p></a>
           </div>
         </div>
         <div class="borders">
           <div class="border2">
             <div>
-              <img src="images/black_white_logo.webp" alt="logo">
+              <a href="https://www.worldialogue.org/videos"><img src="images/black_white_logo.webp" alt="logo"></a>
             </div>
-            <p>VIDEOS</p>
+            <a href="https://www.worldialogue.org/videos"><p>VIDEOS</p></a>
           </div>
         </div>
         <div class="borders">
           <div class="border2">
             <div>
-              <img src="images/black_white_logo.webp" alt="logo">
+              <a href="https://www.worldialogue.org/past-events"><img src="images/black_white_logo.webp" alt="logo"></a>
             </div>
-            <p>PAST EVENTS</p>
+            <a href="https://www.worldialogue.org/past-events"><p>PAST EVENTS</p></a>
           </div>
         </div>
         <div class="borders">
