--- a/announce.html
+++ b/announce.html
@@ -56,7 +56,7 @@
             <div>
               <a href="https://www.worldialogue.org/videos"><img src="images/black_white_logo.webp" alt="logo"></a>
             </div>
-            <a href="https://www.worldialogue.org/videos"><p>VIDEOS</p></a>
+            <a href="https://www.worldialogue.org/videos"><p>Videographer of ISUD</p></a>
           </div>
         </div>
         <div class="borders">
