--- a/announce.html
+++ b/announce.html
@@ -40,7 +40,7 @@
             <div>
               <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="images/black_white_logo.webp" alt="logo"></a>
             </div>
-              <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><p>Peru</p></a>
+              <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><p>Peru Visa</p></a>
           </div>
         </div>
         <div class="borders">
