--- a/announce.html
+++ b/announce.html
@@ -12,7 +12,7 @@
     <h1>The International Society for Universal Dialogue</h1>
   </div>
   <div class="topnav">
-    <a href="index.html">Home</a>
+    <a href="index.html">Home Page</a>
     <a href="about.html">About Us</a>
     <a href="announce.html">Announcements and Events</a>
     <a href="contact.html">Contact</a>
