--- a/announce.html
+++ b/announce.html
@@ -15,7 +15,7 @@
     <a href="index.html">Home Page</a>
     <a href="about.html">About Us</a>
     <a href="announce.html">Announcements and Events</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact Us</a>
   </div>
   <div class="row">
     <div class="leftcolumn">
