--- a/announce.html
+++ b/announce.html
@@ -14,7 +14,7 @@
   <div class="topnav">
     <a href="index.html">Home Page</a>
     <a href="about.html">About Us</a>
-    <a href="announce.html">Announcements and Events</a>
+    <a href="announce.html">Announcements & Events</a>
     <a href="contact.html">Contact Us</a>
   </div>
   <div class="row">
